<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/menu_items" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ManageGuardians">

        <LinearLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/menu_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:text="@string/get_help"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@drawable/bg_about_us"
            android:layout_margin="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/get_help"
                android:textSize="25sp"
                android:paddingHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_help_desc"
                android:paddingHorizontal="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/mail_us_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:textColor="@color/black"
                android:text="@string/Send_Feedback"
                android:textSize="22sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_mail"
                android:drawablePadding="10dp"
                app:drawableTint="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/call_us_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:text="@string/call_us"
                android:textStyle="bold"
                android:padding="14dp"
                app:drawableLeftCompat="@drawable/ic_phone"
                android:drawablePadding="10dp"
                app:drawableTint="@color/black" />

        </LinearLayout>

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>